--- a/app/views/admin/download/files/_file.html.erb
+++ b/app/views/admin/download/files/_file.html.erb
@@ -1,6 +1,6 @@
 <li class='clearfix record <%= cycle("on", "on-hover") %>' id="<%= dom_id(file) -%>">
   <span class='title'>
-    <%= file.download_category.title %> - <strong><%= file.title %></strong>
+    <%= file.download_category.title + '- ' unless file.download_category.blank? %> <strong><%= file.title %></strong>
     <span class="preview">&nbsp;</span>
   </span>
   <span class='actions'>
