added thumb form field in admin files

--- a/app/views/admin/download/files/_form.html.erb
+++ b/app/views/admin/download/files/_form.html.erb
@@ -23,6 +23,16 @@
     <%= f.collection_select :download_category_id, DownloadCategory.all, :id, :title %>
   </div>
   
+  <div class='field'>
+   	<%= f.label :image -%>
+ 	  <%= render :partial => "/shared/admin/image_picker", :locals => {
+ 		  :f => f,
+ 	      :field => :thumb_id,
+        	  :image => f.object.image,
+        	  :toggle_image_display => false
+ 	          } %>
+   </div>
+   
   <%= render :partial => "/shared/admin/form_actions",
               :locals => {
                 :f => f,
