--- a/app/views/admin/download/files/_form.html.erb
+++ b/app/views/admin/download/files/_form.html.erb
@@ -27,7 +27,7 @@
    	<%= f.label :image -%>
  	  <%= render :partial => "/shared/admin/image_picker", :locals => {
  		  :f => f,
- 	      :field => :thumb_id,
+ 	      :field => :image_id,
         	  :image => f.object.image,
         	  :toggle_image_display => false
  	          } %>
